2006-03-21  Justin Haygood and Bjoern Graf  <jhaygood@spsu.edu> <bjoern.graf@gmail.com>

        Reviewed by Eric and Darin.

        - get Windows building again

        * WebCore.vcproj/WebCore/WebCore.vcproj:
        * bridge/win/FrameWin.cpp:
        (WebCore::FrameWin::userAgent):
        * bridge/win/FrameWin.h:
        * platform/GraphicsContext.h:
        * platform/cairo/ImageCairo.cpp:
        (WebCore::Image::supportsType):
        * platform/win/TemporaryLinkStubs.cpp:
        (FrameWin::mimeTypeForFileName):
        (FrameWin::objectContentType):
        (FrameWin::createPlugin):
        (FrameWin::overrideMediaType):
        (FrameWin::passSubframeEventToSubframe):
        (FrameWin::createFrame):
        (FrameWin::incomingReferrer):

2006-03-21  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=7884
          REGRESSION: Selecting a custom style sheet crashes 20/3 nightly

        * page/Frame.cpp:
        (WebCore::UserStyleSheetLoader::setStyleSheet): This was calling the function
        that sets the stylesheet URL, passing it the actual stylesheet.
        (WebCore::Frame::begin):
        (WebCore::Frame::setUserStyleSheetLocation): Renamed the version of
        setUserStyleSheet() that takes a URL to this.
        (WebCore::Frame::reparseConfiguration):
        * page/Frame.h:

2006-03-21  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        - Fix for
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6813
        elementAtPoint needs to return input element when clicking on new text field
        http://bugzilla.opendarwin.org/show_bug.cgi?id=7799
        New text fields don't respect the disabled attribute

        - Tests:
        fast/forms/input-appearance-disabled.html
        fast/forms/input-appearance-elementFromPoint.html
        fast/forms/input-appearance-preventDefault.html
